tests/integration/errors/struct_field_type.rsg
// TEST: compile_error
// EXPECT-ERROR: type mismatch

struct Point {
    x: f64 = 0.0
    y: f64 = 0.0
}

fn main() {
    p := Point { x = "hello" }
}
